# rag-fastapi-react-test

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
ai/: agent.py  generator.py  retriever.py
api/: crud.py  database.py  index.py  models.py  schemas.py
api/db/: crud.py  db.sqlite
app/: layout.tsx  page.tsx
app/application/[id]/: page.tsx
app/application/[id]/edit/: page.tsx
app/application/new/: page.tsx
app/components/: ApplicationForm.tsx  Applications.tsx  CvForm.tsx  CvList.tsx
app/cv/[id]/: page.tsx
app/cv/[id]/edit/: page.tsx
app/cv/new/: page.tsx
db/: db.sqlite
scripts/: extract_details.py
